--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.invisible-left {
+  @apply -translate-x-1/2 opacity-0;
+}
+
+.visible-left {
+  @apply translate-x-0 opacity-100 transition-all duration-1000;
+}
+
+.invisible-top {
+  @apply -translate-y-1/2 opacity-0;
+}
+
+.visible-top {
+  @apply translate-y-0 opacity-100 transition-all duration-1000;
+}
+
+.invisible-bottom {
+  @apply translate-y-1/2 opacity-0;
+}
+
+.visible-bottom {
+  @apply translate-y-0 opacity-100 transition-all duration-1000;
+}
+
+.invisible {
+  @apply opacity-0;
+}
+
+.visible {
+  @apply opacity-100 transition-all duration-1000;
+}
