--- a/src/index.css
+++ b/src/index.css
@@ -6,33 +6,43 @@
 @tailwind utilities;
 
 .invisible-left {
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
   @apply -translate-x-1/2 opacity-0;
 }
 
 .visible-left {
-  @apply translate-x-0 opacity-100 transition-all duration-1000;
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
+  @apply translate-x-0 opacity-100 transition-all ease-out duration-[1500ms];
 }
 
 .invisible-top {
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
   @apply -translate-y-1/2 opacity-0;
 }
 
 .visible-top {
-  @apply translate-y-0 opacity-100 transition-all duration-1000;
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
+  @apply translate-y-0 opacity-100 transition-all ease-out duration-[1500ms];
 }
 
 .invisible-bottom {
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
   @apply translate-y-1/2 opacity-0;
 }
 
 .visible-bottom {
-  @apply translate-y-0 opacity-100 transition-all duration-1000;
-}
-
-.invisible {
-  @apply opacity-0;
-}
-
-.visible {
-  @apply opacity-100 transition-all duration-1000;
+  backface-visibility: hidden !important;
+  -moz-backface-visibility: hidden !important;
+  -webkit-backface-visibility: hidden !important;
+  @apply translate-y-0 opacity-100 transition-all ease-out duration-[1500ms];
 }
