--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 2.5rem;
+}
+
 .invisible-left {
   backface-visibility: hidden !important;
   -moz-backface-visibility: hidden !important;
