Make Footer responsive, create a custom hook for detecting if elements are intersecting and move the functionalities of useintersectionobserver in Home page to inside that custom hook, add new links to navigation

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ html {
   scroll-padding-top: 2.5rem;
 }
 
+.active {
+  @apply text-primary;
+}
+
 .invisible-left {
   backface-visibility: hidden !important;
   -moz-backface-visibility: hidden !important;
